@@ -17,6 +17,11 @@
 	sections may be skipped if using the version of ERC that comes
 	with Emacs.
 
+2006-01-29  Edward O'Connor  <ted@oconnor.cx>
+
+	* erc-viper.el: Remove. Now that ERC is included in Emacs, these
+	work-arounds live in Viper itself.
+
 2006-01-28  Michael Olson  <mwolson@gnu.org>
 
 	* erc-*.el, erc.texi, NEWS: Add Arch taglines as per Emacs
@@ -200,7 +205,8 @@
 	* erc.el, erc-backend.el, erc-ezbounce.el, erc-list.el,
 	erc-log.el, erc-match.el, erc-nets.el, erc-netsplit.el,
 	erc-nicklist.el, erc-nickserv.el, erc-notify.el, erc-pcomplete.el:
-	Use (eval-when-compile 'cl), so that compilation doesn't fail.
+	Use (eval-when-compile (require 'cl)), so that compilation doesn't
+	fail.
 
 	* erc-fill.el, erc-truncate.el: Whitespace munging.
 
